# llms.txt

./: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  worker.py
app/: __init__.py  config.py  database.py  logging.py  main.py  storage.py
app/jobs/: __init__.py  categorizer.py  firecrawl.py  generator.py  models.py  repository.py  schemas.py  service.py  tasks.py
app/llm/: __init__.py  prompts.py  summarizer.py
tests/: conftest.py  test_api.py  test_categorizer.py  test_firecrawl.py  test_generator.py  test_service.py  test_storage.py  test_summarizer.py
