[project]
name = "backend"
version = "0.1.0"
description = "LLM.txt Generator - Web scraper that generates llms.txt documentation files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi==0.122.0",
    "uvicorn[standard]==0.38.0",
    # Database
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.31.0",
    # Settings & HTTP
    "pydantic-settings==2.12.0",
    "httpx==0.28.1",
    # Web scraping
    "firecrawl-py==4.9.0",
    # Storage (S3/R2)
    "boto3==1.41.5",
    # Job queue (PostgreSQL-native, no Redis)
    "pgqueuer==0.25.2",
    # LLM
    "anthropic==0.75.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.6",
    "pytest==8.3.5",
]

[tool.ruff]
# Target Python 3.13
target-version = "py313"

# Enable line length of 88 (Black-compatible)
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

# Ignore these specific rules
ignore = [
    "E501",    # Line too long (formatter handles this)
    "B008",    # Depends() in function defaults (standard FastAPI pattern)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import errors in __init__.py files
"__init__.py" = ["F401"]
# pgqueuer requires nested task definitions in factory function
"app/jobs/tasks.py" = ["PLR0915"]

[tool.ruff.lint.isort]
# Use FastAPI-style import sorting
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix line endings
line-ending = "lf"
